# puml2xml

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  dune-project  puml2xml.opam
.github/workflows/: build-macos.yml  build-ubuntu.yml  build.yml  docker-build.yml
diagrams/: diagram.puml  diagram.xml
src/: dune  file_io.ml  main.ml  parse.ml  parse_utils.ml  types.ml  utils.ml  xml_chunks.ml  xml_gen.ml
